kubernetes/manifests/prometheus/prometheus/option_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
      metallb.universe.tf/allow-shared-ip: "192.168.86.220"
spec:
  selector:
    app: prometheus
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 9090
      protocol: TCP
