kubernetes/manifests/prometheus/prometheus/option_2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  # annotations:
  #   kubernetes.io/ingress.class: traefik-external
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
